# branch-context-manager-skill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml  release.config.cjs
.branch-context/insanoid__skill-repo-migrate/: notes.md  todo.md
.github/workflows/: ci.yml  release.yml  semantic-pr.yml
references/: coordinator-schema.md  notes-reader.md  plans-reader.md  todo-reader.md
scripts/: __init__.py  branch_context.py  branch_context_manager.sh
tests/: test_branch_context.py
