[project]
name = "branch-context-manager-skill"
version = "0.1.0"
description = "Standalone agent skill for branch-scoped context capture and restore"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "ruff>=0.13.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
pretty = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
files = ["scripts", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
